--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>E-dojo</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hello World~</h1>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
