--- a/index.html
+++ b/index.html
@@ -18,22 +18,9 @@
 		
 		<script type="text/babel">          
 			ReactDOM.render(
-				<div>Hello World, TEST</div>, 
+				<div>Hello World</div>, 
 				document.getElementById("root")
 			)      
-			
-			
-			var num = 0;
-
-			function updateNum(){
-		
-				ReactDOM.render(
-					<div>{num++}</div>,
-					document.getElementById("root")
-				)
-			}
-		
-		   setInterval(updateNum,100)
       	</script>    
         <!-- jQuery first, then Tether, then Bootstrap JS. -->
         <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
