--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		
 		<script type="text/babel">          
 			ReactDOM.render(
-				<div>Hello World</div>, 
+				<div><h3>Language Tutors Online</h3>Coming Soon</div>, 
 				document.getElementById("root")
 			)      
       	</script>    
