--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		return(
 			<div>
 				<div className="jumbotron">
-				  <h1 className="display-4">Lenguage Tutors Online</h1>
+				  <h1 className="display-4">Language Tutors Online</h1>
 				  <p className="lead">Coming Soon.</p>
 				  <hr className="my-4" />
 				  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
