--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>React</title>
-<!-- Bootstrap CSS -->
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.25.0/babel.min.js"></script>
-<body>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div id="jumbotron"></div>
-    </div>
-  </div>
-</div>
-<script type="text/babel">          
-	var Jumbotron = React.createClass({
-		render:function(){
-		return(
-			<div>
-				<div className="jumbotron">
-				  <h1 className="display-4">Language Tutors Online</h1>
-				  <p className="lead">Coming Soon.</p>
-				  <hr className="my-4" />
-				  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-				  <p className="lead">
-					<a className="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-				  </p>
-				</div>
-			</div>
-			)
-		}
-	});
-	
-	ReactDOM.render(
-		<Jumbotron />,
-		document.getElementById('jumbotron')
-	);
-</script>
-<!-- jQuery first, then Tether, then Bootstrap JS. -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"><title>Straya Recruitment Agency</title><link href="/static/css/main.96ccfe6f.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div class="container"><div id="root"></div></div><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script><script type="text/javascript" src="/static/js/main.6bc88ee3.js"></script></body></html>
